# advRAG

./: .env-template  API.md  ARCHITECTURE_DIAGRAM.md  DEVELOPMENT.md  DOCS_INDEX.md  README.md  main.py  my_steps.md  pyproject.toml  quickstart.sh
backend/: .env.example  test_sql_injection_protection.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  exception_handlers.py  router.py  routes.py
backend/app/api/handlers/: __init__.py  health_handlers.py  session_handlers.py
backend/app/api/routes/: __init__.py  health.py  sessions.py
backend/app/db/: __init__.py  client.py  manager.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: __init__.py  schemas.py  session.py
backend/app/services/: __init__.py  base.py  session_service.py
backend/app/utils/: __init__.py  exceptions.py  helpers.py  validators.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_api.py  test_sessions.py  test_validators.py
